--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
     rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Sai Interiors Kol</title>
+  <!-- ✅ Open Graph Meta Tags -->
+  <meta property="og:title" content="Sai Interiors Kolkata" />
+  <meta property="og:description"
+    content="Top-rated interior design firm in Kolkata. Transforming spaces with creativity and elegance." />
+  <meta property="og:image"
+    content="https://res.cloudinary.com/suvankar-adhikary/image/upload/v1754640721/favicon_jhzpyh.png" />
+  <meta property="og:url" content="https://www.saiinteriorskol.com/" />
+  <meta property="og:type" content="website" />
+
+  <!-- ✅ Twitter Card Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Sai Interiors Kolkata" />
+  <meta name="twitter:description"
+    content="Top-rated interior design firm in Kolkata. Transforming spaces with creativity and elegance." />
+  <meta name="twitter:image" content="https://res.cloudinary.com/suvankar-adhikary/image/upload/v1754640721/favicon_jhzpyh.png" />
 </head>
 
 <body>
